# orthogonal-planes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: test_single.ply
include/: Plane.h  Timer.h  definitions.h  eig33sym.h
include/PPF/: PairDetector.cpp  PairDetector.h
include/UnionFind/: UnionFindForestIndexAndPathHalving.h  UnionFindForestRankAndPathCompression.h  UnionFindForestRankAndPathHalving.h
include/corners/: Corner.cpp  Corner.h  CornerError.h  LocalParamSO3.h
include/graph/: Graph.h  ParallelPlaneGraph.h  ParallelPlaneGraph_clustering.cpp  ParallelPlaneGraph_filtering.cpp  ParallelPlaneGraph_optimization.cpp  ParallelPlaneSet.h  PlaneGraph.cpp  PlaneGraph.h
include/graph/ceres/: LocalParamS2.h  OrthogonalityConstraint.h  PlaneConfigurationCost.h  WeightedPlaneConfigurationCost.h
include/io/: load_intrinsics.h  load_ply_cloud.h  write_ply.h
include/visualize/: draw_corners.h  draw_lines.h  pcshow.cpp  pcshow.h  pcshow_corners.cpp  pcshow_lines.cpp
ply_corners/: CMakeLists.txt
ply_corners/src/: main.cpp
ply_detect_refine/: CMakeLists.txt
ply_detect_refine/src/: main.cpp
